[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling via constrained LLM decoding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "torch",
    "transformers",
    "huggingface_hub",
    "ipykernel",
    "llm-sdk"
]

[tool.uv]
sources = { "llm-sdk" = { path = "./llm_sdk" } }

[tool.mypy]
mypy_path = "llm_sdk"
follow_imports = "skip"
