[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling via constrained LLM decoding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "huggingface_hub",
    "llm-sdk"
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "ipykernel"
]

[tool.uv]
sources = { "llm-sdk" = { path = "./llm_sdk" } }

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "llm_sdk",
    "llm_sdk.*"
]
follow_imports = "skip"
